S8: последние штрихи